@startuml

' AbstractGui 클래스 정의
class AbstractGui {
    -virtual void drawDisplayDepth0()
    -virtual void drawDisplayDepth1()
    -virtual void drawDisplayDepth2()
    -virtual void updateDisplaySize()
    -virtual void updateDisplayVisible()
    -virtual void slotPropertyChanged(const int& type, const QVariant& value)

    +AbstractHandler* isHandler()
    +bool createSignal(const int& type, const QVariant& value)
    +void drawDisplay(const QVariant& depth)

    -AbstractHandler* mHandler;
}

' GuiExcel 클래스 정의
class GuiExcel {
    -virtual void drawDisplayDepth0()
    -virtual void drawDisplayDepth1()
    -virtual void drawDisplayDepth2()
    -virtual void updateDisplaySize()
    -virtual void updateDisplayVisible()
    -virtual void slotPropertyChanged(const int& type, const QVariant& value)

    -void updateDrawDialog(const int& dialogType, const QVariantList& info)
    -bool checkExcelSheet(const int& sheetIndex)
    -QVariantList readSheetProperty(const int& sheetIndex)
    -void syncSheetData()
    -int isMergeCell(const int& sheetIndex, const int& columnIndex, const int& rowStart)
    -bool updateMergeInfo(const bool& erase, const int& sheetIndex, const int& columnIndex, const int& rowStart, const int& rowEnd)
    -QMap<int, QList<QPair<int, int>>> findMergeInfo(const QMap<int, QVariantList>& sheetData)
    -void constructMergeSplitInfo(const QMap<int, QVariantList>& sheetData, const int& rowStart, const int& columnStart)
    -void updateDisplaySplitCell(const int& sheetIndex)
    -void updateDisplayMergeInfo(const int& sheetIndex)
    -void updateSheetHeaderAdjust(const int& sheetIndex, const bool& resizeColumn)
    -void updateSheetProperty(const int& sheetIndex)
    -void updateCellContent(const int& sheetIndex, const int& row, const int& column)
    -void updateSheetDefaultFocus(const int& sheetIndex, const int& row, const int& column)
    -void updateInitExcelSheet()
    -void updateDisplayKey(const int& keyValue)
    -void updateDisplayExcelSheet()
    -void updateDisplayAutoComplete(const bool& show, const int& columnIndex)
    -void updateDialogAutoCompleteVehicle()
    -void updateDialogValueEnum(const QVariantList& data)
    -void printMergeInfo(const QString& title, const bool& mergeSplit)
    -void copyClipboardInfo(const bool& cutState)
    -void updateClearClipboardInfo(const CellSelectedInfo& clearInfo, const bool& hilight)
    -void updateDisplayShortcut(const int& shortcutType)

    -void setSfcSignal(const bool& sfcSignal)
    -bool getSfcSignal()
    -void setOutputState(const bool& outputState)
    -bool getOutputState()

    -Ui::GuiExcel* mGui
    -QWidget* mMainView
    -QSharedPointer<Dialog> mDialog
    -QMap<int, QTableWidget*> mExcelSheet
    -QMap<int, ExcelSheet> mMergeInfo
    -QMap<int, QPair<int, int>> mModelIndex
    -ExcelSheet mCopyMergeInfo
    -ExcelSheet mClearMergeInfo
    -QList<int> mClearCellInfo
    -QMenu* mMenuRight
    -QMap<int, QAction*> mMenuActionItem
    -QTableWidgetItem* mSelectItem

    -int mCurrentSheetIndex
    -bool mSfcSignal
    -bool mOutputState
}

' 클래스 간의 관계 정의
AbstractGui <|- GuiExcel : inheritance
GuiExcel <-- HandlerExcel : update property : signal/slot
GuiExcel ..> HandlerExcel : send event singal

@enduml
